--- a/src/main/resources/view/ReservationsForm.fxml
+++ b/src/main/resources/view/ReservationsForm.fxml
@@ -130,5 +130,11 @@
             <Font size="15.0" />
          </font>
       </Label>
+      <FontAwesomeIcon fx:id="darkModeIcon" fill="#636e72" iconName="TOGGLE_ON" layoutX="603.0" layoutY="33.0" onMouseClicked="#darkModeIconOnAction" size="2em" />
+      <Label fx:id="lblHeadingUserName1" layoutX="638.0" layoutY="7.0" prefHeight="35.0" prefWidth="123.0" text="Dark Mode" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
