--- a/src/main/resources/view/CreditsForm.fxml
+++ b/src/main/resources/view/CreditsForm.fxml
@@ -125,5 +125,21 @@
             <Font size="15.0" />
          </font>
       </Label>
+      <Label layoutX="496.0" layoutY="235.0" prefHeight="43.0" prefWidth="81.0" text="Bill ID" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblBillID" layoutX="641.0" layoutY="235.0" prefHeight="43.0" prefWidth="145.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <FontAwesomeIcon fx:id="darkModeIcon" fill="#636e72" iconName="TOGGLE_ON" layoutX="613.0" layoutY="34.0" onMouseClicked="#darkModeIconOnAction" size="2em" />
+      <Label fx:id="lblHeadingUserName1" layoutX="648.0" layoutY="8.0" prefHeight="35.0" prefWidth="123.0" text="Dark Mode" textFill="#636e72">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
